--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,5 @@
 mountpoints:
   /:
-    url: "https://author-p130360-e1272151.adobeaemcloud.com/bin/franklin.delivery/adobe-rnd/aem-boilerplate-xwalk/main"
+    url: "https://author-p27461-e83049.adobeaemcloud.com/bin/franklin.delivery/thomsebastin/xwalk-demo/main"
     type: "markup"
     suffix: ".html"
